--- a/application/pom.xml
+++ b/application/pom.xml
@@ -25,5 +25,44 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-application-dependencies</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <bannedDependencies>
+                                    <searchTransitive>true</searchTransitive>
+                                    <excludes>
+                                        <exclude>org.springframework*:*</exclude>
+                                        <exclude>org.hibernate*:*</exclude>
+                                        <exclude>jakarta.persistence*:*</exclude>
+                                        <exclude>org.jooq*:*</exclude>
+                                        <exclude>org.flywaydb*:*</exclude>
+                                        <exclude>org.springframework.boot:spring-boot-starter*</exclude>
+                                    </excludes>
+                                    <message>Application must stay framework-free; only Lombok and minimal Jakarta annotations are allowed.</message>
+                                </bannedDependencies>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
