--- a/component-test/src/test/resources/application-test.yml
+++ b/component-test/src/test/resources/application-test.yml
@@ -5,6 +5,8 @@ embedded:
     enabled: true
 
 spring:
+  main:
+    web-application-type: servlet
   datasource:
     url: jdbc:postgresql://${embedded.postgresql.host}:${embedded.postgresql.port}/${embedded.postgresql.schema}
     username: ${embedded.postgresql.user}
