--- a/integrations/web/pom.xml
+++ b/integrations/web/pom.xml
@@ -7,28 +7,23 @@
         <groupId>com.example.payroll</groupId>
         <artifactId>payroll-demo-jpa-jooq</artifactId>
         <version>0.1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>component-test</artifactId>
+    <artifactId>web</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.example.payroll</groupId>
-            <artifactId>bootstrap</artifactId>
+            <artifactId>application</artifactId>
         </dependency>
         <dependency>
             <groupId>com.example.payroll</groupId>
-            <artifactId>web</artifactId>
+            <artifactId>persistence</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.playtika.testcontainers</groupId>
-            <artifactId>embedded-postgresql</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
