--- a/integrations/bootstrap/pom.xml
+++ b/integrations/bootstrap/pom.xml
@@ -62,6 +62,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                    <mainClass>com.example.payroll.PayrollDemoApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
