--- a/integrations/bootstrap/src/main/resources/application.yml
+++ b/integrations/bootstrap/src/main/resources/application.yml
@@ -6,8 +6,19 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
   jooq:
     sql-dialect: postgres
+    settings:
+      execute-logging: true
   flyway:
     enabled: true
     locations: classpath:db/migration
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
+    org.jooq: DEBUG
