--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <maven.version>3.9.6</maven.version>
         <maven.enforcer.version>3.4.1</maven.enforcer.version>
         <spring-boot.version>3.2.5</spring-boot.version>
+        <jooq.version>3.18.14</jooq.version>
+        <flyway.version>9.22.3</flyway.version>
+        <postgresql.version>42.6.2</postgresql.version>
         <lombok.version>1.18.32</lombok.version>
         <playtika.version>3.1.0</playtika.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
